basic bootstrap setting finished !

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,21 @@
 </head>
 <body>
 
-<%= yield %>
+<!-- start of menu -->
+<div class = "navbar navbar-inverse navbar-static-top">
+<div class = "container">
+<a class = "navbar-brand active">TDL</a>
+</div>
+</div>
+<!-- end of menu -->
 
+<%= yield %>
+<!-- start of footer -->
+<div class = "navbar navbar-default navbar-fixed-bottom">
+<div class = "container">
+<p class = "navbar-text pull-left">Builded By Justinsanity</p>
+</div>
+</div>
+<!-- end of footer -->
 </body>
 </html>
