--- a/app/views/tdls/index.html.erb
+++ b/app/views/tdls/index.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h1> Index Page of TDL </h1>
 
 <table class="table">
@@ -17,3 +18,4 @@
     <% end %>
   </tbody>
 </table>
+</div>
