--- a/app/views/tdls/index.html.erb
+++ b/app/views/tdls/index.html.erb
@@ -14,6 +14,7 @@
     <tr> 
       <td> <%= tdl.todo %> </td>
       <td> <%= tdl.isdone %> </td>
+      <td> <%= link_to 'Edit', edit_tdl_path(tdl) %>
       </td>
     </tr>
     <% end %>
