--- a/app/views/tdls/edit.html.erb
+++ b/app/views/tdls/edit.html.erb
@@ -1,10 +1,19 @@
+<div class="container">
 <%= form_for @tdl do |f| %>
+<div class="form-group">
 <%= f.label :todo , "todo" %>
+<div class="col-md-8">
 <%= f.text_field :todo %>
+</div>
+</div>
 
+<div class="form-group">
 <%= f.label :isdone , "isdone:" %>
+<div class="col-md-8">
 <%= f.check_box :isdone %>
+</div>
+</div>
 
 <%= f.submit "Update" %>
 <% end %>
-
+</div>
