layout updated move new button to index page from layout

--- a/app/views/tdls/index.html.erb
+++ b/app/views/tdls/index.html.erb
@@ -1,5 +1,8 @@
 <div class="container">
 <h1> Index Page of TDL </h1>
+<%= link_to new_tdl_path , :class => "navbar-btn btn btn-primary btn-sm" do %>
+<i class "fa fa-plis fa-sm"></i>New
+<% end %>
 
 <table class="table">
   <thead>
