--- a/app/views/tdls/index.html.erb
+++ b/app/views/tdls/index.html.erb
@@ -18,6 +18,7 @@
       <td> <%= tdl.todo %> </td>
       <td> <%= tdl.isdone %> </td>
       <td> <%= link_to 'Edit', edit_tdl_path(tdl) %>
+      <td> <%= link_to 'Delete', tdl_path(tdl) , :method => :delete %>
       </td>
     </tr>
     <% end %>
