--- a/app/views/tdls/index.html.erb
+++ b/app/views/tdls/index.html.erb
@@ -4,7 +4,7 @@
 <i class "fa fa-plis fa-sm"></i>New
 <% end %>
 
-<table class="table">
+<table class="table table-condensed">
   <thead>
     <tr>
       <th> todo </th>
