--- a/app/views/tdls/index.html.erb
+++ b/app/views/tdls/index.html.erb
@@ -14,9 +14,21 @@
     <% @tdls.each do |tdl| %>
     <tr> 
       <td style="word-break: break-all;"><%= tdl.todo %> </td>
-      <td> <%= link_to tdl.isdone.to_s ,isdone_tdl_path(tdl),method: :post %> </td>
-      <td> <%= link_to 'Edit', edit_tdl_path(tdl) %>
-      <td> <%= link_to 'Delete', tdl_path(tdl) , :method => :delete %></td>
+      <td> <%= link_to isdone_tdl_path(tdl) , method: :post do %> 
+      <% if tdl.isdone? %>
+      <span class="glyphicon glyphicon-check" aria-hidden="true"></span> 
+      <% else %>
+      <span class="glyphicon glyphicon-unchecked" aria-hidden="true"></span> 
+      <% end %>
+      <% end %>
+      </td>
+      <td> <%= link_to edit_tdl_path(tdl) do %><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+      <% end %> 
+      </td>
+      <td> <%= link_to tdl_path(tdl) , :method => :delete do%>
+      <span class="glyphicon glyphicon-remove" aria-hidden="true"></span>
+      <% end %>
+      </td>
     </tr>
     <% end %>
   </tbody>
