new social-button-add

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -11,8 +11,9 @@
  * file per style scope.
  *
  *= require_tree .
+ *= social-share-button
  *= require_self
  */
-
+@import "social-share-button";
 @import "bootstrap-sprockets";
 @import "bootstrap";
