--- a/app/views/tdls/index.html.erb
+++ b/app/views/tdls/index.html.erb
@@ -1,4 +1,7 @@
 <div class="container">
+<div>
+<%= social_share_button_tag("TDL test") %>
+</div>
 <%= link_to new_tdl_path , :class => "navbar-btn btn btn-primary btn-sm" do %>
 <i class "fa fa-plis fa-sm"></i>New
 <% end %>
